--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: python
 python:
   - 2.7
 script: nosetests
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install python-dev libevent-dev
 install:
   - pip install nose --use-mirrors
   - pip install . --use-mirrors
