tox.ini: test only on Python 2.7 and do only quick and clean tests.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
-envlist = py26,py27,py31,py32
+envlist = py27
 
 [testenv]
 deps=nose
-commands=nosetests
+commands=nosetests -v -e test_buffered_channel -e heartbeat -e reqstream -e test_server -e raise_error -e test_socket_on_channel
