Do less apt-get stuff;  will hopefully speed up Travis runs.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,7 @@ python:
   - 2.7
 script: nosetests -v -e test_buffered_channel -e heartbeat -e reqstream -e test_server -e raise_error -e test_socket_on_channel
 before_install:
-  - sudo apt-get update
-  - sudo apt-get install python-dev libevent-dev
+  - sudo apt-get install libevent-dev
 install:
   - pip install nose --use-mirrors
   - pip install . --use-mirrors
