Add flake8 to tox.

--- a/tox.ini
+++ b/tox.ini
@@ -2,5 +2,9 @@
 envlist = py26,py27,py31,py32
 
 [testenv]
-deps=nose
-commands=nosetests
+deps =
+    flake8
+    nose
+commands =
+    flake8 --ignore=E501,E128 zerorpc bin
+    nosetests
