Flake8 configuration in tox.ini
Flake8 will read the config from tox.ini by itself.

--- a/tox.ini
+++ b/tox.ini
@@ -8,3 +8,8 @@ deps =
 commands =
     flake8 --ignore=E501,E128 zerorpc bin
     nosetests
+
+[flake8]
+ignore = E501,E128
+filename = *.py,zerorpc
+exclude = tests,.git,dist,doc,*.egg-info,__pycache__,setup.py
