--- a/.travis.yml
+++ b/.travis.yml
@@ -22,5 +22,5 @@ addons:
       - libevent-dev
 install:
   - pip install flake8
-  - "pip install nose gevent msgpack-python $PYZMQ"
-  - pip install . --no-deps
+  - "pip install nose $PYZMQ"
+  - pip install .
