Tox config updated.

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,15 @@
 [tox]
-envlist = py26,py27,py31,py32
+envlist = py26,py27,py34,py35
 
 [testenv]
 deps =
     flake8
     nose
 commands =
-    flake8 --ignore=E501,E128 zerorpc bin
-    nosetests
+    flake8 zerorpc bin
+    nosetests -v
+setenv =
+    ZPC_TEST_TIME_FACTOR=0.2
 
 [flake8]
 ignore = E501,E128
