--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,7 @@ deps =
 commands =
     flake8 zerorpc bin
     nosetests -v
-setenv =
-    ZPC_TEST_TIME_FACTOR=0.2
+passenv = ZPC_TEST_TIME_FACTOR
 
 [flake8]
 ignore = E501,E128
