removes py3 tests creates a new environment dedicated to running flake8

--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,13 @@
 [tox]
-envlist = py26,py27,py31,py32
+envlist = py26,py27,flakes
 
 [testenv]
-deps =
-    flake8
-    nose
-commands =
-    flake8 --ignore=E501,E128 zerorpc bin
-    nosetests
+deps = nose
+commands = nosetests
+
+[testenv:flakes]
+deps = flake8
+commands = flake8 --ignore=E501,E128 zerorpc bin
 
 [flake8]
 ignore = E501,E128
