formatting and info

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@ commands = nosetests
 
 [testenv:flakes]
 deps = flake8
-commands = flake8 --ignore=E501,E128 zerorpc bin
+# E128 - continuation line under-indented for visual indent
+# E501 - line too long
+commands = flake8 zerorpc bin --ignore=E128,E501
 
 [flake8]
 ignore = E501,E128
