--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,50 @@
+sudo: false
 language: python
-python:
-  - 2.6
-  - 2.7
-env:
-  matrix:
-    - PYZMQ='pyzmq>=14'
-    - PYZMQ='pyzmq>=14.3'
-    - PYZMQ='pyzmq>=14.2,<14.3'
-    - PYZMQ='pyzmq>=14.1,<14.2'
-    - PYZMQ='pyzmq>=14.0,<14.1'
-    - PYZMQ='pyzmq<14'
+python: 2.7
+
 matrix:
   fast_finish: true
-script:
-  - flake8 --ignore=E501,E128 zerorpc bin
-  - ZPC_TEST_TIME_FACTOR=0.2 nosetests -v
-sudo: false
+  env:
+    - TOXENV=py26-pyzmq
+    - TOXENV=py26-pyzmq13
+    - TOXENV=py26-pyzmq14
+    - TOXENV=py26-pyzmq15
+    - TOXENV=py27-pyzmq
+    - TOXENV=py27-pyzmq13
+    - TOXENV=py27-pyzmq14
+    - TOXENV=py27-pyzmq15
+    - TOXENV=py26-pyzmq13.0
+    - TOXENV=py26-pyzmq13.1
+    - TOXENV=py27-pyzmq13.0
+    - TOXENV=py27-pyzmq13.1
+    - TOXENV=py26-pyzmq14.0
+    - TOXENV=py26-pyzmq14.1
+    - TOXENV=py26-pyzmq14.2
+    - TOXENV=py26-pyzmq14.3
+    - TOXENV=py26-pyzmq14.4
+    - TOXENV=py26-pyzmq14.5
+    - TOXENV=py26-pyzmq14.6
+    - TOXENV=py26-pyzmq14.7
+    - TOXENV=py27-pyzmq14.0
+    - TOXENV=py27-pyzmq14.1
+    - TOXENV=py27-pyzmq14.2
+    - TOXENV=py27-pyzmq14.3
+    - TOXENV=py27-pyzmq14.4
+    - TOXENV=py27-pyzmq14.5
+    - TOXENV=py27-pyzmq14.6
+    - TOXENV=py27-pyzmq14.7
+    - TOXENV=py26-pyzmq15.0
+    - TOXENV=py26-pyzmq15.1
+    - TOXENV=py26-pyzmq15.2
+    - TOXENV=py26-pyzmq15.3
+    - TOXENV=py26-pyzmq15.4
+    - TOXENV=py27-pyzmq15.0
+    - TOXENV=py27-pyzmq15.1
+    - TOXENV=py27-pyzmq15.2
+    - TOXENV=py27-pyzmq15.3
+    - TOXENV=py27-pyzmq15.4
+    - TOXENV=flakes
+
 addons:
   apt:
     packages:
@@ -25,3 +54,5 @@ install:
   - pip install flake8
   - "pip install nose gevent msgpack-python $PYZMQ"
   - pip install . --no-deps
+
+script: tox
