--- a/.travis.yml
+++ b/.travis.yml
@@ -4,55 +4,53 @@ python: 2.7
 
 matrix:
   fast_finish: true
-  env:
-    - TOXENV=py26-pyzmq
-    - TOXENV=py26-pyzmq13
-    - TOXENV=py26-pyzmq14
-    - TOXENV=py26-pyzmq15
-    - TOXENV=py27-pyzmq
-    - TOXENV=py27-pyzmq13
-    - TOXENV=py27-pyzmq14
-    - TOXENV=py27-pyzmq15
-    - TOXENV=py26-pyzmq13.0
-    - TOXENV=py26-pyzmq13.1
-    - TOXENV=py27-pyzmq13.0
-    - TOXENV=py27-pyzmq13.1
-    - TOXENV=py26-pyzmq14.0
-    - TOXENV=py26-pyzmq14.1
-    - TOXENV=py26-pyzmq14.2
-    - TOXENV=py26-pyzmq14.3
-    - TOXENV=py26-pyzmq14.4
-    - TOXENV=py26-pyzmq14.5
-    - TOXENV=py26-pyzmq14.6
-    - TOXENV=py26-pyzmq14.7
-    - TOXENV=py27-pyzmq14.0
-    - TOXENV=py27-pyzmq14.1
-    - TOXENV=py27-pyzmq14.2
-    - TOXENV=py27-pyzmq14.3
-    - TOXENV=py27-pyzmq14.4
-    - TOXENV=py27-pyzmq14.5
-    - TOXENV=py27-pyzmq14.6
-    - TOXENV=py27-pyzmq14.7
-    - TOXENV=py26-pyzmq15.0
-    - TOXENV=py26-pyzmq15.1
-    - TOXENV=py26-pyzmq15.2
-    - TOXENV=py26-pyzmq15.3
-    - TOXENV=py26-pyzmq15.4
-    - TOXENV=py27-pyzmq15.0
-    - TOXENV=py27-pyzmq15.1
-    - TOXENV=py27-pyzmq15.2
-    - TOXENV=py27-pyzmq15.3
-    - TOXENV=py27-pyzmq15.4
-    - TOXENV=flakes
+
+env:
+  - TOXENV=py26-pyzmq
+  - TOXENV=py26-pyzmq13
+  - TOXENV=py26-pyzmq14
+  - TOXENV=py26-pyzmq15
+  - TOXENV=py27-pyzmq
+  - TOXENV=py27-pyzmq13
+  - TOXENV=py27-pyzmq14
+  - TOXENV=py27-pyzmq15
+  - TOXENV=py26-pyzmq13.0
+  - TOXENV=py26-pyzmq13.1
+  - TOXENV=py27-pyzmq13.0
+  - TOXENV=py27-pyzmq13.1
+  - TOXENV=py26-pyzmq14.0
+  - TOXENV=py26-pyzmq14.1
+  - TOXENV=py26-pyzmq14.2
+  - TOXENV=py26-pyzmq14.3
+  - TOXENV=py26-pyzmq14.4
+  - TOXENV=py26-pyzmq14.5
+  - TOXENV=py26-pyzmq14.6
+  - TOXENV=py26-pyzmq14.7
+  - TOXENV=py27-pyzmq14.0
+  - TOXENV=py27-pyzmq14.1
+  - TOXENV=py27-pyzmq14.2
+  - TOXENV=py27-pyzmq14.3
+  - TOXENV=py27-pyzmq14.4
+  - TOXENV=py27-pyzmq14.5
+  - TOXENV=py27-pyzmq14.6
+  - TOXENV=py27-pyzmq14.7
+  - TOXENV=py26-pyzmq15.0
+  - TOXENV=py26-pyzmq15.1
+  - TOXENV=py26-pyzmq15.2
+  - TOXENV=py26-pyzmq15.3
+  - TOXENV=py26-pyzmq15.4
+  - TOXENV=py27-pyzmq15.0
+  - TOXENV=py27-pyzmq15.1
+  - TOXENV=py27-pyzmq15.2
+  - TOXENV=py27-pyzmq15.3
+  - TOXENV=py27-pyzmq15.4
+  - TOXENV=flakes
 
 addons:
   apt:
     packages:
       - python-dev
       - libevent-dev
-install:
-  - pip install flake8
-  - "pip install nose gevent msgpack-python $PYZMQ"
-  - pip install . --no-deps
 
+install: pip install tox
 script: tox
