Do not run flake8 on travis for python2.6.
flake8 doesn't support python2.6 anymore.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+sudo: false
 language: python
 python:
   - 2.6
@@ -11,16 +12,19 @@ env:
     - PYZMQ='pyzmq>=13,<14'
 matrix:
   fast_finish: true
-script:
-  - flake8 --ignore=E501,E128 zerorpc bin
-  - nosetests -v
-sudo: false
 addons:
   apt:
     packages:
       - python-dev
       - libevent-dev
 install:
-  - pip install flake8
+  - if [ $TRAVIS_PYTHON_VERSION != '2.6' ]; then
+    pip install flake8;
+    fi
   - "pip install nose $PYZMQ"
   - pip install .
+script:
+  - if [ $TRAVIS_PYTHON_VERSION != '2.6' ]; then
+    flake8 --ignore=E501,E128 zerorpc bin;
+    fi
+  - nosetests -v
