--- a/.travis.yml
+++ b/.travis.yml
@@ -10,22 +10,30 @@ env:
   - TOXENV=py26-pyzmq13
   - TOXENV=py26-pyzmq14
   - TOXENV=py26-pyzmq15
+
   - TOXENV=py27-pyzmq
   - TOXENV=py27-pyzmq13
   - TOXENV=py27-pyzmq14
   - TOXENV=py27-pyzmq15
-  - TOXENV=py26-pyzmq13.0
-  - TOXENV=py26-pyzmq13.1
+
+  - TOXENV=py34-pyzmq
+  - TOXENV=py34-pyzmq13
+  - TOXENV=py34-pyzmq14
+  - TOXENV=py34-pyzmq15
+
+  - TOXENV=py35-pyzmq
+  - TOXENV=py35-pyzmq13
+  - TOXENV=py35-pyzmq14
+  - TOXENV=py35-pyzmq15
+
+
   - TOXENV=py27-pyzmq13.0
   - TOXENV=py27-pyzmq13.1
-  - TOXENV=py26-pyzmq14.0
-  - TOXENV=py26-pyzmq14.1
-  - TOXENV=py26-pyzmq14.2
-  - TOXENV=py26-pyzmq14.3
-  - TOXENV=py26-pyzmq14.4
-  - TOXENV=py26-pyzmq14.5
-  - TOXENV=py26-pyzmq14.6
-  - TOXENV=py26-pyzmq14.7
+
+  - TOXENV=py35-pyzmq13.0
+  - TOXENV=py35-pyzmq13.1
+
+
   - TOXENV=py27-pyzmq14.0
   - TOXENV=py27-pyzmq14.1
   - TOXENV=py27-pyzmq14.2
@@ -34,16 +42,29 @@ env:
   - TOXENV=py27-pyzmq14.5
   - TOXENV=py27-pyzmq14.6
   - TOXENV=py27-pyzmq14.7
-  - TOXENV=py26-pyzmq15.0
-  - TOXENV=py26-pyzmq15.1
-  - TOXENV=py26-pyzmq15.2
-  - TOXENV=py26-pyzmq15.3
-  - TOXENV=py26-pyzmq15.4
+
+  - TOXENV=py35-pyzmq14.0
+  - TOXENV=py35-pyzmq14.1
+  - TOXENV=py35-pyzmq14.2
+  - TOXENV=py35-pyzmq14.3
+  - TOXENV=py35-pyzmq14.4
+  - TOXENV=py35-pyzmq14.5
+  - TOXENV=py35-pyzmq14.6
+  - TOXENV=py35-pyzmq14.7
+
+
   - TOXENV=py27-pyzmq15.0
   - TOXENV=py27-pyzmq15.1
   - TOXENV=py27-pyzmq15.2
   - TOXENV=py27-pyzmq15.3
   - TOXENV=py27-pyzmq15.4
+
+  - TOXENV=py35-pyzmq15.0
+  - TOXENV=py35-pyzmq15.1
+  - TOXENV=py35-pyzmq15.2
+  - TOXENV=py35-pyzmq15.3
+  - TOXENV=py35-pyzmq15.4
+
   - TOXENV=flakes
 
 addons:
