python 2.6 needs gevent < 1.2

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,7 @@ envlist =
 deps =
     nose
 
+    py26-pyzmq{,13,14,15}: gevent<1.2
     py{26,27,34,35}-pyzmq13: pyzmq<14
     py{26,27,34,35}-pyzmq14: pyzmq<15
     py{26,27,34,35}-pyzmq15: pyzmq<16
