--- a/.travis.yml
+++ b/.travis.yml
@@ -36,3 +36,12 @@ addons:
 
 install: pip install tox
 script: tox
+
+# Tweak for adding python3.6; see
+# https://github.com/travis-ci/travis-ci/issues/4794
+addons:
+  apt:
+    sources:
+      - deadsnakes
+    packages:
+      - python3.6
