Upgrade tox.ini according to ci.yaml

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27,py34,py35
+envlist = py27,py36,py37,py38,py39
 
 [testenv]
 deps =
@@ -11,6 +11,6 @@ commands =
 passenv = ZPC_TEST_TIME_FACTOR
 
 [flake8]
-ignore = E501,E128
+ignore = E501,E128,W503,W504
 filename = *.py,zerorpc
 exclude = tests,.git,dist,doc,*.egg-info,__pycache__,setup.py
