Move from deprecated nose to pytest (solves #243)
Signed-off-by: Tomasz Kłoczko <kloczek@github.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,4 +29,4 @@ script:
   - if [ $TRAVIS_PYTHON_VERSION != '2.6' ]; then
     flake8 --ignore=E501,E128 zerorpc bin;
     fi
-  - nosetests -v
+  - pytest -v
