--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,10 @@ envlist = py26,py27,py34,py35
 [testenv]
 deps =
     flake8
-    nose
+    pytest
 commands =
     flake8 zerorpc bin
-    nosetests -v
+    pytest -v
 passenv = ZPC_TEST_TIME_FACTOR
 
 [flake8]
