--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,6 @@ commands =
 passenv = ZPC_TEST_TIME_FACTOR
 
 [flake8]
-ignore = E501,E128
+ignore = E501,E128,W503
 filename = *.py,zerorpc
 exclude = tests,.git,dist,doc,*.egg-info,__pycache__,setup.py
